ingress/ingress live.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"

spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - bloxxgame.online
    secretName: tls-cafe-ingress
  rules:
  - host: bloxxgame.online
    http:
      paths:
      - path: /
        backend:
            serviceName: driver
            servicePort: 80
